Updates for WRAP 2016

--- a/2015.md
+++ b/2015.md
@@ -1,12 +1,21 @@
 ---
 layout: page
-title: Program
-permalink: /program/
+title: 2015
+permalink: /2015/
 ---
 
-# <small>09:00 - 10:00</small> Keynote
+The First International Workshop on Representative Applications was held
+September 8th in Chicago, USA as part of IEEE Cluster 2015. With 9 technical
+papers and a keynote presentation by Dr. Michael Heroux, the workshop provided
+a venue for attendees from across the world to learn about and discuss the use
+of represenattive applications in advancing computer science and computational
+science research. Below are full details of last year's program.
+ 
+*****
 
-- **Making Representative Apps Represent Apps**, Dr. Michael Heroux.
+&nbsp; 
+
+- 09:00--10:00 **Making Representative Apps Represent Apps**, Dr. Michael Heroux.
 
 Representative Apps play a very important role design space exploration.  If
 well designed and implemented they provide a distilled model of some aspect of
@@ -19,20 +28,14 @@ some guidance on how to design and implement them and talk about some of our
 latest work in this area.  We draw upon experiences from the Mantevo and HPCG
 benchmark projects in order to provide concrete examples.
 
-# <small>10:30 - 12:30</small> Computational Sciences
-
 - 10:30--11:00: **Performance Evaluation of Unstructured Mesh Physics on Advanced Architectures**,  Charles Ferenbaugh.
 - 11:00--11:30: **Expressing Parallelism on Many-Core for Deterministic Discrete Ordinates Transport**,  Tom Deakin, Simon McIntosh-Smith and Wayne Gaudin.
 - 11:30--12:00: **CMT-bone: A Proxy App for Compressible Multiphase Turbulence Simulation Software**,  Nalini Kumar, Mrugesh Shringarpure, Tania Banerjee, Jason Hackl, S Balachandar, Herman Lam, Alan George and Sanjay Ranka.
 - 12:00--12:30: **Mini-app Driven Optimisation of Inertial Confinement Fusion Codes**,  Robert Bird, Paddy Gillies, Michael Bareford, John Andy Herdman and Stephen Jarvis.
 
-# <small>14:00 - 15:30</small> Performance Analysis
-
 - 14:00--14:30: **Developing MiniApps on Modern Platforms Using Using Multiple Programming Models**,   Bronson Messer, Eduardo D'Azevedo, Judith Hill, Wayne Joubert, Supada Laosooksathit and Arnold Tharrington.
 - 14:30--15:00: **Evaluation of Parallel Communication Models in Nekbone, a Nek5000 mini-application**,  Ilya Ivanov, Jing Gong, Dana Akhmetova, Ivy Bo Peng, Stefano Markidis, Erwin Laure, Rui Machado, Mirko Rahn, Valeria Barth, Alistair Hart and Paul Fischer.
 - 15:00--15:30: **Design and Development of Domain Specific Active Libraries with Proxy Applications**,  Istvan Reguly, Gihan Mudalige and Michael Giles.
-
-# <small>16:00 - 17:00</small> Optimization
 
 - 16:00--16:30: **Introducing and Exploiting Hierarchical Structural Information**,  Daniel Rubio Bonilla, Colin W. Glass, Jan Kuper and Robert de Groote. 
 - 16:30--17:00: **Enabling Tractable Exploration of the Performance of Adaptive Mesh Refinement**,  Courtenay Vaughan and Richard Barrett.
